Forget to put some codes. It's my fault. I didn't pay attention enough.

--- a/HW/2.3/index.html
+++ b/HW/2.3/index.html
@@ -19,7 +19,7 @@
           google.script.run.withSuccessHandler(updateData).getCode(code);
         }
       }
-      function updateData()
+      function updateData(data)
       {
         document.getElementById("search").value = data;
         M.updateTexfields();
